# mensa-upb-api

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml
.sqlx/: query-1477fded8be083c2d5e29a92f9e558c9855ad90020dc1199bce0d20cca02799d.json  query-2306ceee73b304c3ca88da52837ee4173631a63d3a89e6440b3334c546213863.json  query-474de9870fb2cbfb2cdc37004c82f42b80a311d4a00ee22b97dd1e7b5c91ad39.json  query-48944b01f74bc796d58c26eedf9025b641910dc475b48556855f10f59112e367.json  query-56b320a7188c5ee88c869e763f6d23ee37461894a3b20c850908923460c3d3a0.json  query-65858112433addbff921108a5b110ffead845478d359af83b70d98ff8d1945f2.json  query-66fcef790324f9eedc03ad052acc67111c50d82f56471df1c9adba498be0d543.json  query-781e98dce280715896a347808d891ff02e2c609c161e9c935a76fa9d63e61696.json  query-87707bff13b4ce6ff47d2f79ee5d40b677042a20c217acc347ecdd04ebf3e6e0.json  query-a08588e594190460891c0e545b9983594e837f8da93db0d7c03e8ef16b9d0e3b.json  query-b5a990f34095b255672e81562dc905e1957d1d33d823dc82ec92b552f5092028.json  query-cdf76d5e7d5d61d3cc61411d526816996885ccbd07237847c57f62cc3b6357db.json  query-d7d20b101fbed8dfe7ff33ac7a6a0e4cddfaa36050c5482818b6ee4783f8173d.json  query-da9537a50cbe6a27836af42e7e333581826a3f87131f001f2db3ef39b88b746e.json  query-f804f9c634a34945d7aa0cd3162b20ff9f1ff928912d871a708a088f2d011ba7.json  query-ffbe520bbd10d79f189bc4cb202fc4367d1a1ea563d1b7845ab099ef6ec1e47a.json
examples/: mensa-widget.html
migrations/: 20241120182108_change_vegan_vegetarian_optional.down.sql  20241120182108_change_vegan_vegetarian_optional.up.sql  20251215165721_allow_refreshes.down.sql  20251215165721_allow_refreshes.up.sql  20251215213415_add_nutrition_values.down.sql  20251215213415_add_nutrition_values.up.sql
scraper/: Cargo.toml  Dockerfile  compose.yml
scraper/src/: canteen.rs  dish.rs  lib.rs  main.rs  menu.rs  refresh.rs  util.rs
shared/: Cargo.toml
shared/src/: canteen.rs  lib.rs
src/: cache.rs  canteen.rs  dish.rs  lib.rs  main.rs  menu.rs
web-api/: Cargo.toml  Dockerfile  compose.yml
web-api/src/: dish.rs  governor.rs  lib.rs  main.rs  menu.rs  util.rs
web-api/src/endpoints/: menu.rs  metadata.rs  mod.rs  nutrition.rs  price_history.rs
