

[workspace]
members = [
    "scraper",
    "web-api",
]
resolver = "2"

[workspace.package]
license = "MIT"
authors = ["Moritz Hölting"]
repository = "https://github.com/moritz-hoelting/mensa-upb-api"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
dotenvy = "0.15.7"
itertools = "0.13.0"
sqlx = "0.8.2"
strum = "0.26.3"
tokio = "1.41.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"