

[workspace]
members = [
    "scraper",
    "shared",
    "web-api",
]
resolver = "2"

[workspace.package]
license = "MIT"
authors = ["Moritz Hölting"]
repository = "https://github.com/moritz-hoelting/mensa-upb-api"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
dotenvy = "0.15.7"
futures = "0.3.31"
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = "0.8.2"
strum = "0.27.2"
tokio = "1.48.0"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
